--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,13 @@
 version: '3'
 
 services:
-  server:
-    image: docker.udolphin.com/wiki/server:1.0.1
+  admin:
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "1234:1234"
+    container_name: admin-mongo
     volumes:
-      - ./logs:/app/logs
-      - ./config/config.json:/app/config/config.json
-    depends_on:
-      - db  
-    environment:
-      - NODE_ENV=production
-  db:
-    image: docker.io/mongo
-    restart: on-failure:5
-#    ports:
-#      - "27018:27017"
+      - ./data:/data
+      - ./config:/config
